--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dhirajkhade26@gmail.com
-spring.mail.password=ndsc mgje ufhq mjjt
+spring.mail.username=123456@gmail.com
+spring.mail.password=xxx xxx xxx xxx xxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
